<resources>
    <string name="app_name">AirAppProject</string>
    <string name="title_home">首页</string>
    <string name="title_notifications">行程</string>
    <string name="title_dashboard">服务大厅</string>
    <string name="title_flight">航班动态</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_myself">我</string>

    <string name="btn_goto_main_page">进入主页面</string>


    <string name="tab_home_search_round_trip">往返</string>
    <string name="tab_home_search_one_way">单程</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
