<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/tab_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/tab_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/tab_flight"
        android:icon="@drawable/ic_flight_black_24dp"
        android:title="@string/title_flight" />
    <item
        android:id="@+id/tab_myself"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_myself" />
</menu>
